RUN ou DEBUG -  passar VM Arguments
--add-modules java.xml.bind