@@ -1,1 +1,4 @@
 # OAuth2
+
+VM Arguments - para rodar este projeto:
+--add-modules java.xml.bind
